# freegs4e

./: .gitignore  .pre-commit-config.yaml  01-freeboundary.py  02-read-geqdsk.py  03-mast.py  04-read-mast-geqdsk.py  05-fixed-boundary.py  06-xpoints.py  07-increase-resolution.py  08-mast-upgrade.py  09-metal-wall.py  10-mastu-connection.py  11-optimise-coils.py  MAST-example.ipynb  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test-01-compare.py  test-convergence.py  test_fileutils.py
.github/workflows/: formatting.yml  formatting_linting.yml  publish_to_pypi.yml
docs/: conf.py
freegs/: __init__.py  critical.py  equilibrium.py  jtor.py  picard.py  plotting.py
freegs4e/: coil.py  control.py  critical.py  equilibrium.py  gradshafranov.py  jtor.py  plotting.py
freegsfast/: coil.py  critical.py  critical_old.py  equilibrium.py  faster_shape.py  jtor.py  machine.py  multi_coil.py  plotting.py
