[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freegsfast"
version = "0.1.0"
authors = [
    {name = "Adriano Agnello", email = "adriano.agnello@stfc.ac.uk"},
    {name = "Nicola Amorisco", email = "nicola.amorisco@stfc.ac.uk"},
    {name = "George Holt", email = "george.holt@stfc.ac.uk"},
]
description = "Free boundary Grad-Shafranov solver for tokamak plasma equilibrium"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: LGPL3 License",
    "Operating System :: OS Independent"
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.urls]
Homepage = "https://github.com/farscape-project/freegsfast"